--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -89,7 +89,7 @@
       <div class="form-group">
         <label for="service_resume" class="col-sm-3 control-label"><%= t("services.form.resume") %></label>
         <div class="col-md-7 col-sm-9">
-          <p class="form-control-static"><%= t("services.resumes.resume_#{@service.resume.to_s}") %></p>
+          <p class="form-control-static"><%= t("services.resumes.#{@service.resume.to_s}") %></p>
         </div>
       </div>
       <div class="form-group">
