--- a/app/views/services/_sidebar.html.erb
+++ b/app/views/services/_sidebar.html.erb
@@ -4,9 +4,9 @@
       <li<% if ((@priority.blank?) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("services.sidebar.all"), services_path() %></li>
       <hr class='divider' />
       <li class='disabled'><a><%= t("services.sidebar.view_by_type")%></a></li>
-      <li<% if ((@priority == Service::PRIORITY_HIGH) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("services.sidebar.priority_high"), services_path(:priority => Service::PRIORITY_HIGH) %></li>
-      <li<% if ((@priority == Service::PRIORITY_NORMAL) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("services.sidebar.priority_normal"), services_path(:priority => Service::PRIORITY_NORMAL) %></li>
-      <li<% if ((@priority == Service::PRIORITY_LOW) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("services.sidebar.priority_low"), services_path(:priority => Service::PRIORITY_LOW) %></li>
+      <% Service::AVAILABLE_PRIORITIES.each do |prior| %>
+      <li<% if ((@priority == prior) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("services.priorities.priority_#{prior}"), services_path(:priority => prior) %></li>
+      <% end %>
     </ul>
   </div>
 </div>
