Big changes to results views
MODIFY: Service result view
Modified to make a good use of the space available. Now it has
two colums fully used.
Also, the latest results module has been improved to allow user
to go to service-in-host results panel.

ADD: Service in host results view
Added a view to show information about a service in a host. Currently
under development.

MODIFY: Host's services results view
To show a general view of the results of the services running in
a host.

MODIFY: Created a panel-based file architecture
Using partials for each module.

--- a/app/assets/stylesheets/ui/sidebar.sass
+++ b/app/assets/stylesheets/ui/sidebar.sass
@@ -35,3 +35,10 @@ div.content-index
 
     h1
       margin-top: 0px
+
+div.content-full
+  div.page-header
+    margin-top: 0px
+
+    h1
+      margin-top: 0px
