Changes to work when there is no data.
MODIFY: Changes in results views
Information messages to show when there is no data to show.

MODIFY: Service model
When there is no result saved, resurn status nil (interpreted
as an UNKNOWN).

--- a/app/assets/stylesheets/ui/tables.sass
+++ b/app/assets/stylesheets/ui/tables.sass
@@ -12,7 +12,17 @@ table.table-elements
       padding: 60px 0px
       font-weight: lighter
       font-size: 2em
-      color: #c3c3c3
+      color: #aaa
+
+table.table-results
+  tr.no-results
+    td
+      text-align: center
+      padding: 20px 0px
+      font-weight: lighter
+      font-size: 0.6em
+      color: #666
+
 
 table.table tfoot
   tr
