--- a/app/views/services/panels/_hosts_results.html.erb
+++ b/app/views/services/panels/_hosts_results.html.erb
@@ -11,11 +11,11 @@
       <% elsif (@service.status == Service::STATUS_WARNING) %>
       <span class='badge'><strong class='text-warning'><%= t("services.status.warning").upcase %></strong></span>
       <% else %>
-      <span class='badge'><strong class='text-primary'><%= t("services.status.unknown").upcase %></strong></span>
+      <span class='badge'><strong class='text-info'><%= t("services.status.unknown").upcase %></strong></span>
       <% end %>
     </div>
   </div>
-  <table class="table table-hover">
+  <table class="table table-hover table-results">
     <thead>
       <tr>
         <th class="col-xs-5"><%= t("services.results.hosts_results.table.host") %></th>
@@ -38,8 +38,15 @@
         <td><%= hresult.value %></td>
       </tr>
       <% end %>
+    <% else %>
+      <tr class='no-results'>
+        <td colspan="3">
+          There is no data available (yet)
+        </td>
+      </tr>
     <% end %>
     </tbody>
+    <% if (!@service.results.last.blank?) %>
     <tfoot>
       <tr>
         <td colspan="2">
@@ -50,5 +57,6 @@
         </td>
       </tr>
     </tfoot>
+    <% end %>
   </table>
 </div>
