Added some translations.

--- a/app/views/services/panels/_hosts_results.html.erb
+++ b/app/views/services/panels/_hosts_results.html.erb
@@ -41,7 +41,7 @@
     <% else %>
       <tr class='no-results'>
         <td colspan="3">
-          There is no data available (yet)
+          <%= t("services.results.hosts_results.table.no_results") %>
         </td>
       </tr>
     <% end %>
