--- a/app/views/services/panels/_host_history.html.erb
+++ b/app/views/services/panels/_host_history.html.erb
@@ -48,7 +48,7 @@
     <% else %>
       <tr class='no-results'>
         <td colspan="3">
-          There is no data available (yet)
+          <%= t("services.host_results.host_history.table.no_results") %>
         </td>
       </tr>
     <% end %>
