--- a/app/views/services/results.js.erb
+++ b/app/views/services/results.js.erb
@@ -1,1 +1,2 @@
 $("#hosts-results").html("<%= escape_javascript(render(:partial => 'services/panels/hosts_results'))%>");
+$("#service-info").html("<%= escape_javascript(render(:partial => 'services/panels/service_info'))%>");
