--- a/app/views/hosts/results.html.erb
+++ b/app/views/hosts/results.html.erb
@@ -31,15 +31,7 @@
           <div class="panel-heading clearfix">
             <b><%= t('hosts.results.service_panel.title', :service => serv.name) %></b>
             <div class='pull-right'>
-              <% if (serv.status == Service::STATUS_OK) %>
-              <span class='badge'><strong class='text-success'><%= t("services.status.ok").upcase %></strong></span>
-              <% elsif (serv.status == Service::STATUS_ERROR) %>
-              <span class='badge'><strong class='text-danger'><%= t("services.status.error").upcase %></strong></span>
-              <% elsif (serv.status == Service::STATUS_WARNING) %>
-              <span class='badge'><strong class='text-warning'><%= t("services.status.warning").upcase %></strong></span>
-              <% else %>
-              <span class='badge'><strong class='text-info'><%= t("services.status.unknown").upcase %></strong></span>
-              <% end %>
+              <%= service_status_badge(serv.status) %>
             </div>
           </div>
           <div class='panel-body'>
@@ -71,7 +63,7 @@
         y_axis: "<%= t('services.resumes.'+ serv.resume.to_s) %> [<%= serv.get_units_short %>]",
         legend: "<%= t('hosts.results.chart.legend', :service => serv.name) %>"
       },
-      data_url: "<%= results_data_service_path(serv.id) %>"
+      data_url: "<%= host_results_data_service_path(:id => serv.id, :host_id => @host.id) %>"
     });
     <% end %>
   });
