--- a/app/views/services/index_hosts.html.erb
+++ b/app/views/services/index_hosts.html.erb
@@ -52,6 +52,7 @@
         <tr class='element'>
           <td>
             <%= host.name %>
+            <% if (!host.is_active?) %><span class='text-primary'>(<%= t("hosts.form.inactive") %>)</span><% end %>
           </td>
           <td>
             <%= host.address %>
